Fixed read more displacement on mobile

--- a/assets/css/2-modules/_blog_posts.sass
+++ b/assets/css/2-modules/_blog_posts.sass
@@ -201,7 +201,7 @@
 
 			.read_more_button
 				position: relative
-				top: -45px
+				top: -25px
 
 
 //Small Monitors and Tablets
@@ -289,7 +289,7 @@
 			top: 0px
 			left: -40px
 			width: 290px
-			height: 640px
+			height: 665px
 
 			.post_title_container
 				//border: solid
@@ -330,4 +330,4 @@
 				top: 90px
 
 			.read_more_button
-				top: 0px
+				top: 35px
