--- a/assets/css/2-modules/_side_bar.sass
+++ b/assets/css/2-modules/_side_bar.sass
@@ -27,7 +27,7 @@
 		top: 30px
 		left: 0px
 		margin: 0 auto
-		z-index: 1
+		z-index: 2
 		//border: solid
 		p 
 			color: white
@@ -35,20 +35,9 @@
 			font-size: 14px
 			margin-top: -1px
 			text-align: left
-
-	.read_more_button
-		position: relative
-		top: 0px
-		left: 90px
-		//border: solid
-		z-index: 2
-
 		a 
+			color: white
 			text-decoration: none
-		p
-			color: skyblue
-			font-family: 'Open Sans', sans-serif;
-			font-size: 7px
 
 .social_media_section
 	position: absolute
